# Perceptive

./: package-lock.json  package.json  vite.config.ts
src/: App.svelte  Menu.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
wasm-lib/: Cargo.toml
wasm-lib/src/: lib.rs
