[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
# webgl = ["wgc"]

[dependencies]
wasm-bindgen = "0.2.84"
# web-sys = { version = "0.3", features = [
#     "Document",
#     "Element",
#     "HtmlCanvasElement",
#     "Window",
# ] }
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.20"
serde-wasm-bindgen = "0.4"

console_log = "1.0"
wasm-bindgen-futures = "0.4.30"

console_error_panic_hook = { version = "0.1.7", optional = true }
